# YOLO-Master

./: .gitignore  README.md  README_CN.md  demo.html  docs.html  index.html  matrix_report.md  model-zoo.html  run_lora_brain_tumor_sweep.sh  run_matrix.py  test_lora_e2e.py  test_lora_memory_mps.py  verify_molora.py  wiki.html  yolo_master_brain_tumor_lora.yaml  yolo_master_visdrone_lora.yaml
assets/css/: style.css
docs/: index.html
examples/YOLO-Master-Edge-Deployment/: CMakeLists.txt  README.md
examples/YOLO-Master-Edge-Deployment/cpp/: postprocess.cpp  preprocess_types.h
examples/YOLO-Master-Edge-Deployment/cpp/backends/: backend.h  backend_factory.cpp  backend_factory.h  mnn_backend.cpp  mnn_backend.h  ncnn_backend.cpp  ncnn_backend.h
examples/lora_examples/: yolo_master_lora_README.md  yolo_master_visdrone_lora.yaml
scripts/: quick_train_verify.py  smoke_test_coco2017.py  verify_yolo_master_weight.py
scripts/reproduce/: README.md
tests/: lora_e2e_smoke.py  test_python.py
ultralytics/cfg/: default.yaml
ultralytics/engine/: exporter.py  predictor.py  trainer.py  validator.py
ultralytics/nn/: tasks.py
ultralytics/nn/modules/moa/: moa.py
ultralytics/nn/modules/moe/: __init__.py  modules.py  routers.py  scheduler.py
ultralytics/nn/modules/mot/: mot.py
ultralytics/nn/peft/molora/: __init__.py  moe_aware.py
ultralytics/utils/: lora.py  loss.py
wiki/: Home.md  _Sidebar.md
wiki/MoE/: Home.md  Mixture_of_Attention.md  MoE_Core_Modules.md  MoE_Diagnostics_Analysis.md  MoE_Routers_Experts.md  MoE_Training_Loss_Pruning.md
wiki/PEFT/: Home.md
yolo-master-agent/: SKILL.md
yolo-master-agent/agents/: openai.yaml
yolo-master-agent/assets/: autotrain_cases.json
yolo-master-agent/references/: skill-architecture.md
yolo-master-agent/scripts/: run_yolo_master_skill.py  validate_yolo_master_skill.py
